--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
+    "start-server": "npx parcel index.html",
     "test": "jest"
   },
   "repository": {
@@ -25,10 +26,15 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "cross-fetch": "^4.0.0",
+    "express": "^4.19.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "request": "^2.88.2"
   },
   "browserslist": [
     "last 2 versions"
-  ]
+  ],
+  "main": "index.js"
 }
